@startuml er_diagram

entity Book {
  *book_id : INTEGER <<PK>>
  --
  title : TEXT
  author : TEXT
  isbn : TEXT
  year : INTEGER
  publisher : TEXT
  genre : TEXT
  description : TEXT
  total_copies : INTEGER
  available_copies : INTEGER
}

entity Reader {
  *reader_id : INTEGER <<PK>>
  --
  name : TEXT
  card_number : TEXT
  contact : TEXT
  password : TEXT
  status : BOOLEAN
}

entity Librarian {
  *librarian_id : INTEGER <<PK>>
  --
  name : TEXT
  username : TEXT
  password : TEXT
}

entity Loan {
  *loan_id : INTEGER <<PK>>
  --
  *book_id : INTEGER <<FK>>
  *reader_id : INTEGER <<FK>>
  issue_date : TEXT
  due_date : TEXT
  return_date : TEXT
  status : TEXT
}

entity Reservation {
  *reservation_id : INTEGER <<PK>>
  --
  *book_id : INTEGER <<FK>>
  *reader_id : INTEGER <<FK>>
  reservation_date : TEXT
  status : TEXT
}

entity Fine {
  *fine_id : INTEGER <<PK>>
  --
  *reader_id : INTEGER <<FK>>
  amount : REAL
  reason : TEXT
  status : TEXT
}

' Связи
Book ||--o{ Loan
Reader ||--o{ Loan
Book ||--o{ Reservation
Reader ||--o{ Reservation
Reader ||--o{ Fine

@enduml